--- a/src/style.scss
+++ b/src/style.scss
@@ -1,26 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400');
+@import url('https://fonts.googleapis.com/css?family=Abel|Raleway:300,400');
 
-$g_01: rgba(150, 150, 150, .5);
+$g_01: rgba(150, 150, 150, .65);
 $g_02: rgba(200, 200, 200, .5);
 
 
 body {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0 auto;
     padding: 0 auto;
     position: relative;
-    font-family: 'Montserrat', sans-serif;
+    background-image: linear-gradient(to bottom right,$g_01,$g_02);
+    
+    
 }
 .container-fluid {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0 !important;
     padding: 0 !important;
-    background: url('img/aj.png') center bottom no-repeat / cover;
-    bottom: 0;
+    background: url('img/aj.png') right bottom no-repeat / cover;
     position: fixed;
     z-index:0;
       height:100%;
-      background-size: 85%;
+      background-size: 95vh;
     &:before {
         content: '';
         position: absolute;
@@ -28,7 +31,40 @@ body {
         right: 0;
         bottom: 0;
         left: 0;
-        background-image: linear-gradient(to bottom right,$g_01,$g_02);
+        // background-image: linear-gradient(to bottom right,$g_01,$g_02);
+        display: flex;
+        text-align: center;
+        vertical-align: center;
+        justify-content: center;
     }
+    div {
+        background-image: linear-gradient(to bottom right,$g_01,$g_02);
+        height: 100%;
+        z-index: 5;
+        display: block;
+        padding-top: 35vh;
+        h1, h2, h3 {
+            z-index: 5;
+            display: block;
+            width: 100%;
+            height: auto;
+            text-align: center;
+            color: #ffffff;
+            text-shadow: 1px 1px 0px #3977fd;
+        }
+        h1 {
+            font-family: 'Raleway', sans-serif;
+            font-weight: 400;
+        }
+        h2 {
+            font-family: 'Abel', sans-serif;
+        }
+        h3 {
+            font-family: 'Raleway', sans-serif;
+            font-weight: 300;
+        }
+    }
+    
 
 }
+
